Start on Erlangen talk

--- a/2017/14-09-SIAM-GS-erlangen.tex
+++ b/2017/14-09-SIAM-GS-erlangen.tex
@@ -119,6 +119,31 @@ London
   runtime-configurable block preconditioners using PETSc.
 \end{abstract}
 
+\begin{frame}
+  \frametitle{Firedrake \url{www.firedrakeproject.org}}
+
+  \begin{quote}
+    {\normalfont [\ldots]} an automated system for the solution of partial
+    differential equations using the finite element method.
+  \end{quote}
+
+  \begin{itemize}
+  \item Written in Python.
+  \item Finite element problems specified with \emph{embedded} domain
+    specific language.
+  \item \emph{Runtime} compilation to low-level (C) code.
+  \item Explicitly \emph{data parallel}: don't worry about MPI.
+  \end{itemize}
+
+  \begin{flushright}
+    {\scriptsize F.~Rathgeber, D.A.~Ham, \textbf{LM}, M.~Lange,
+      F.~Luporini, A.T.T.~McRae, G.-T.~Bercea, G.R.~Markall,
+      P.H.J.~Kelly. ACM Transactions on Mathematical Software,
+      2016. \arxivlink{1501.01809}{cs.MS}\nocite{Rathgeber:2016}}
+  \end{flushright}
+\end{frame}
+
+
 \appendix
 \begin{frame}[t]
   \frametitle{References}
